Add rectifed pose_detector

--- a/ocam/config/camera.yaml
+++ b/ocam/config/camera.yaml
@@ -5,6 +5,7 @@ camera_matrix:
   rows: 3
   cols: 3
   data: [963.304385, 0.000000, 637.039646, 0.000000, 965.910111, 479.796409, 0.000000, 0.000000, 1.000000]
+  # data: [963.304385, 0.000000, 318.52, 0.000000, 965.910111, 239.895, 0.000000, 0.000000, 1.000000]
 distortion_model: plumb_bob
 distortion_coefficients:
   rows: 1
