Refactor pose estimator

--- a/pose_estimator/CMakeLists.txt
+++ b/pose_estimator/CMakeLists.txt
@@ -139,8 +139,11 @@ include
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/pose.cpp)
-
+add_executable(${PROJECT_NAME}_node src/pose.cpp src/pose_estimator.cpp)
+include_directories(
+    include
+    ${catkin_INCLUDE_DIRS}
+)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
