--- a/pose_estimator/CMakeLists.txt
+++ b/pose_estimator/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
 )
 
+find_package(OpenCV REQUIRED)
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -139,7 +140,8 @@ include
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/pose.cpp src/pose_estimator.cpp)
+# add_executable(${PROJECT_NAME}_node src/pose.cpp src/pose_estimator.cpp)
+add_executable(${PROJECT_NAME}_node src/pose_aruco.cpp)
 include_directories(
     include
     ${catkin_INCLUDE_DIRS}
@@ -155,7 +157,7 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${OpenCV_LIBS})
 
 #############
 ## Install ##
